Minor Bug fixed 1) login (Problem:cannot login to NUS OpenID) 2) background image (Problem: not full page display) 3) Navbar collapse (Problem: navbar collapse not working)

--- a/UltimateRoute/bootstrap/Cover/cover.css
+++ b/UltimateRoute/bootstrap/Cover/cover.css
@@ -143,8 +143,11 @@ body {
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
-    background-image: url('../../image/cover.jpg');
-    background-size: 1280px;
+    background: url('../../image/cover.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   /* Handle the widths */
   .masthead,
